--- a/app.ipynb
+++ b/app.ipynb
@@ -22,8 +22,8 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [28/May/2023 05:52:15] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [28/May/2023 05:52:15] \"\u001b[37mGET /static/1.jpg HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [28/May/2023 19:53:38] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [28/May/2023 19:54:17] \"\u001b[37mPOST /predict HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
